feat: 텍스트 및 기타 드래그 차단

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@ html {
 
 body {
   background-color: #fff9eb;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 a {
