fix: font decode fail 에러 수정

--- a/src/font/font.css
+++ b/src/font/font.css
@@ -2,7 +2,7 @@
   font-family: "NanumSquareNeo";
   font-style: normal;
   font-weight: 400;
-  src: url("./NanumSquareNeo-Variable.woff") format("woff");
+  src: url("./NanumSquareNeo-Variable.woff") format("font-woff");
 }
 
 @font-face {
@@ -41,8 +41,8 @@
 }
 
 @font-face {
-  font-family: 'TTLaundryGothicB';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2403-2@1.0/TTLaundryGothicB.woff2') format('woff2');
+  font-family: "TTLaundryGothicB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/2403-2@1.0/TTLaundryGothicB.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
