--- a/src/font/font.css
+++ b/src/font/font.css
@@ -2,7 +2,7 @@
   font-family: "NanumSquareNeo";
   font-style: normal;
   font-weight: 400;
-  src: url("./NanumSquareNeo.woff") format("woff");
+  src: url("./NanumSquareNeo.woff2") format("font-woff2");
 }
 
 @font-face {
