--- a/src/font/font.css
+++ b/src/font/font.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "NanumSquareNeo";
   font-style: normal;
-  font-weight: 400;
-  src: url("./NanumSquareNeo.woff2") format("font-woff2");
+  font-weight: 600;
+  src: url("./NanumSquareNeo.woff2") format("woff2");
 }
 
 @font-face {
